// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formatter jsonl format entries are JSON.stringify-ed 1`] = `
Array [
  "{\\"type\\":\\"result\\",\\"fetchTime\\":\\"21:48:05\\",\\"score\\":95,\\"FCP\\":0.9,\\"FMP\\":1,\\"SI\\":1.1,\\"FCI\\":3.2,\\"TTI\\":4}",
]
`;

exports[`formatter tsv format results are formatted as expected 1`] = `
Array [
  "21:48:05	95	0.9	1.0	1.1	3.2	4.0",
]
`;

exports[`formatter tsv format results heading row added before first result 1`] = `
Array [
  "fetchTime	score	FCP	FMP	SI	FCI	TTI",
  "21:48:05	95	0.9	1.0	1.1	3.2	4.0",
]
`;

exports[`formatter tsv format results userTimingMark uses default number format precision (2 digits) 1`] = `
Array [
  "21:48:05	95	0.9	1.0	1.1	3.2	4.0	1.25",
]
`;

exports[`formatter tsv format stats stats are formatted as expected 1`] = `
Array [
  "",
  "median  	95	0.9	1.0	1.1	3.2	4.0",
]
`;

exports[`formatter tsv format stats stddev uses custom precision for score (1 digit) 1`] = `
Array [
  "",
  "stddev  	95.0	0.9	1.0	1.1	3.2	4.0",
]
`;
